--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,11 +24,12 @@ requirements:
     - cppzmq
     - zeromq
     - cryptopp
-    - gcc-7             # [linux]
+    - util-linux        # [linux]
     - xtl >=0.3.4,<0.4
   run:
     - zeromq
     - cryptopp
+    - util-linux        # [linux]
 
 test:
   commands:
