--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,7 @@ source:
   url: https://github.com/QuantStack/xeus/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
   patches:
+    - 0001-add-zeromq.patch
     - 0001-fix-static-cppzmq.patch
 build:
   number: 0
