--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,9 @@ environment:
 platform:
     - x64
 
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 install:
     # If there is a newer build queued for the same PR, cancel this one.
     - cmd: |
@@ -54,3 +57,6 @@ test_script:
     - conda build recipe --quiet
 deploy_script:
     - cmd: upload_or_check_non_existence .\recipe gouarin --channel=main
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
