--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
   conda config --remove channels defaults
   conda config --add channels defaults
   conda config --add channels conda-forge
+  conda config --add channels gouarin
   conda config --set show_channel_urls true
   conda install --yes --quiet conda-forge-build-setup
   source run_conda_forge_build_setup
