--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,9 +12,11 @@ source:
   sha256: {{ sha256 }}
    
 build:
-  number: 0
+  number: '0'
+  string: 'cling_0'
   skip: true  # [win and py<35]
   features:   # [win]
+    - cling
     - vc14    # [win]
 
 requirements:
@@ -22,12 +24,12 @@ requirements:
     - toolchain
     - cmake
     - cling-patches
-    - cppzmq 4.2.2
+    - cppzmq 4.2.3
     - zeromq 4.2.3
     - cryptopp
     - gcc-7             # [linux]
     - util-linux        # [linux]
-    - xtl >=0.3.4,<0.4
+    - xtl >=0.4.0,<0.5
   run:
     - cling-patches
     - zeromq 4.2.3
