--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,13 +12,15 @@ source:
   sha256: {{ sha256 }}
    
 build:
-  number: '0'
-  string: 'cling_0'
-  skip: true  # [win and py<35]
-  features:   # [win]
+  noarch: ''
+  noarch_python: false
+  features:
     - cling
     - vc14    # [win]
-
+  skip: true  # [win and py<35]
+  number: '0'
+  string: 'cling_0'
+  
 requirements:
   build:
     - toolchain
