--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xeus" %}
-{% set version = "0.10.1" %}
-{% set sha256 = "993c3fbd36cb5cdc4641a6ec57a0342d97662438e2229bb45bf6c226ef17e4f2" %}
+{% set version = "0.11.0" %}
+{% set sha256 = "479bf8ed915d325efe3b237697b50d8113f74928130a35be7f44dce87912d7a8" %}
 
 package:
   name: {{ name|lower }}
@@ -10,7 +10,7 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/QuantStack/xeus/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
-   
+
 build:
   noarch: ''
   noarch_python: false
@@ -20,7 +20,7 @@ build:
   skip: true  # [win and py<35]
   number: '0'
   string: 'cling_0'
-  
+
 requirements:
   build:
     - toolchain
@@ -32,6 +32,7 @@ requirements:
     - gcc-7             # [linux]
     - util-linux        # [linux]
     - xtl >=0.4.0,<0.5
+    - nlohmann_json >=3.1.1,<4.0
   run:
     - cling-patches
     - zeromq 4.2.3
