--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xeus" %}
-{% set version = "0.13.0" %}
-{% set sha256 = "d60233b8363b8e977173ca408081c9c046b7114a4fbe27d22f549d8353778621" %}
+{% set version = "0.14.0" %}
+{% set sha256 = "e004237a1404e297b9052b206394ff324cc69f86cd143b11b583ced96883232a" %}
 
 package:
   name: {{ name|lower }}
@@ -24,16 +24,17 @@ requirements:
     - toolchain
     - cmake
     - cling-patches
-    - cppzmq 4.2.3
-    - zeromq 4.2.3
+    - cppzmq 4.3.0
+    - zeromq 4.2.5
     - cryptopp
     - gcc-7             # [linux]
     - util-linux        # [linux]
+    - pkg-config        # [unix]
     - xtl >=0.4.0,<0.5
-    - nlohmann_json >=3.1.1,<4.0
+    - nlohmann_json >=3.1.2,<4.0
   run:
     - cling-patches
-    - zeromq 4.2.3
+    - zeromq 4.2.5
     - cryptopp
     - util-linux        # [linux]
 
