--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xeus" %}
-{% set version = "0.14.1" %}
-{% set sha256 = "a6815845d4522ec279f142d3b4e92ef52cd80847b512146a65f256a77e058cfe" %}
+{% set version = "0.15.0" %}
+{% set sha256 = "bc99235b24d5757dc129f3ed531501fb0d0667913927ed39ee24281952649183" %}
 
 package:
   name: {{ name|lower }}
@@ -31,7 +31,7 @@ requirements:
     - util-linux        # [linux]
     - pkg-config        # [unix]
     - xtl >=0.4.0,<0.5
-    - nlohmann_json >=3.1.2,<4.0
+    - nlohmann_json >=3.2.0,<4.0
   run:
     - cling-patches
     - zeromq 4.2.5
@@ -63,3 +63,4 @@ extra:
     - SylvainCorlay
     - JohanMabille
     - gouarin
+    - martinRenou
